# thesslagreen

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_FIXES.md  CODEX_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  README_en.md  airpack4_modbus.json  claude.md  codex2.md  codex_tasks.md  constraints.txt  delete_stale_branches.sh  example_configuration.yaml  example_dashboard.yaml  hacs.json  info.md  modbus_registers.csv  pyproject.toml  pytest.ini  registers  requirements-dev.txt  requirements-test-min.txt  requirements.txt  validate.yaml
.github/: RELEASE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: auto-merge-codex.yml  ci.yaml  release.yaml  release.yml
Rekuperator/: README.md  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  init.py  manifest.json  modbus_client.py  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
Rekuperator/translations/: pl.json
custom_components/: device_scanner.py
custom_components/thessla_green_modbus/: __init__.py  _compat.py  _coordinator_capabilities.py  _coordinator_connection.py  _coordinator_connection_test.py  _coordinator_device_info.py  _coordinator_factory.py  _coordinator_init.py  _coordinator_io.py  _coordinator_io_mixin.py  _coordinator_read_batches.py  _coordinator_read_bits.py  _coordinator_read_common.py  _coordinator_register_groups.py  _coordinator_register_processing.py  _coordinator_retry.py  _coordinator_runtime_io.py  _coordinator_scan_cache.py  _coordinator_scan_result.py  _coordinator_schedule.py  _coordinator_transport_select.py  _coordinator_update.py  _entity_registry_migrations.py  _entry_migrations.py  _legacy.py  _migrations.py  _scanner_capabilities_mixin.py  _scanner_registers_mixin.py  _scanner_transport_mixin.py  _setup.py  _transport_retry.py  binary_sensor.py  button.py  capability_rules.py  cleanup_old_entities.py  climate.py  clock_sync.py  config_flow.py  config_flow_confirm.py  config_flow_device_validation.py  (+82 more)
docs/: airflow_migration.md  airpack4_dangerous_entities_inventory.md  airpack4_deferred_registers.md  airpack4_register_exposure_policy.md  airpack4_vendor_reference_coverage.json  airpack4_vendor_reference_coverage.md  analiza_kodu_2026-04-22.md  audit_cleanup_batch_report.md  branch_test_refactor_plan.md  code_cleanup_audit.md  codex_docs_task_thesslagreen_clear.md  codex_guide_pl_2026-04-21.md  codex_guidelines.md  codex_guidelines_thesslagreen_refactor.md  coordinator_proxy_cleanup.md  coordinator_proxy_migration_inventory.md  coordinator_proxy_remaining_plan.md  coordinator_proxy_removal_inventory.md  coordinator_proxy_removal_report.md  core_consolidation_plan.md  data_updates.md  development_validation.md  device_client_cleanup_inventory.md  device_client_redesign.md  device_client_redesign_baseline.md  device_client_redesign_plan.md  diagnostics.md  entity_id_migration.md  final_architecture_cleanup.md  final_cleanup_before_device_validation_report.md  final_cleanup_step_report.md  final_code_cleanup_before_device_test.md  final_shim_audit_report.md  final_shim_cleanup_inventory.md  final_shim_cleanup_report.md  final_transport_shim_cleanup_report.md  final_transport_shim_inventory.md  ha_quality_scale_audit.md  maintainability_audit.md  mutable_global_state_inventory.md  (+21 more)
docs/agents/: CONTEXT_HANDOFF.md  GOVERNANCE_CONTRACT.json
docs/architecture/: file_inventory.md  runtime_flow.md  write_path.md
docs/archive/: code_cleanup_audit.md  coordinator_proxy_removal_inventory.md  device_client_cleanup_report.md  final_pre_device_test_cleanup_report.md  final_shim_audit_inventory.md  next_safe_cleanup_report.md  release_tooling_audit.md
docs/audits/: repository_file_inventory_audit.md  targeted_readback_write_path_audit.md
docs/releases/: v2.8.x.md
registers/: thessla_green_registers_full.json
tests/: README.md  conftest.py  conftest_loop_detect.py  detect_loops_plugin.py  helpers_coordinator.py  helpers_entity_data_correctness.py  helpers_modbus.py  helpers_register_loader.py  helpers_scanner.py  platform_stubs.py  pytest.ini  run_optimization_tests.py  run_tests.py  test_airflow_unit.py  test_airpack4_dangerous_entity_marking.py  test_airpack4_dangerous_register_exposure.py  test_airpack4_vendor_reference_coverage.py  test_all_entity_creation.py  test_api_contracts.py  test_async_non_blocking.py  test_available_registers_schedule_time.py  test_backoff.py  test_binary_sensor.py  test_button.py  test_check_maintainability_tool.py  test_chunking.py  test_cleanup_audit.py  test_cleanup_old_entities.py  test_climate.py  test_climate_helpers.py  test_climate_optimistic.py  test_clock_sync.py  test_config_flow.py  test_config_flow_confirm.py  test_config_flow_errors.py  test_config_flow_helpers.py  test_config_flow_options.py  test_config_flow_reauth.py  test_config_flow_runtime_loader.py  test_config_flow_runtime_validation.py  (+256 more)
tests/unit/: test_build_scanner_kwargs.py  test_config_normalization.py  test_errors.py  test_reauth_helpers.py  test_register_codec_helpers.py  test_register_loader_cache_async.py  test_register_loader_helpers.py  test_register_parse_file_helpers.py  test_scanner_io_core.py  test_transport_retry.py
thessla_green_modbus/: entity.py  number.py
tools/: README.md  __init__.py  check_maintainability.py  check_translations.py  cleanup_old_entities.py  clear_airflow_stats.py  compare_airpack4_vendor_coverage.py  compare_registers_with_reference.py  convert_registers_csv_to_json.py  generate_registers.py  generate_strings.py  migrate_register_names.py  modbus_registers.csv  py_compile_all.py  sort_registers_json.py  translate_register_descriptions.py  validate_dashboard_entities.py  validate_entity_mappings.py  validate_register_pdf.py  validate_registers.py
tools/agents/: checkpoint.py  resume.py
tools/manual/: README.md  cleanup_old_entities.py  generate_strings.py  migrate_register_names.py  sort_registers_json.py
(+188 files in other folders)
