[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thessla-green-modbus"
version = "2.2.0"
description = "ThesslaGreen Modbus integration for Home Assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ThesslaGreen Modbus Integration", email = "blakinio@o2.pl"}
]
keywords = ["home-assistant", "modbus", "hvac", "thesslagreen", "airpack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
requires-python = ">=3.12"
# Core dependencies
dependencies = ["pymodbus>=3.5.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-homeassistant-custom-component>=0.13.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pydantic>=1.10,<2",
    "pre-commit>=3.7.0",
    "hassfest>=2024.12.0",
    "hacs>=1.34.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/thesslagreen/thessla-green-modbus-ha"
"Bug Reports" = "https://github.com/thesslagreen/thessla-green-modbus-ha/issues"
"Source" = "https://github.com/thesslagreen/thessla-green-modbus-ha"
"Documentation" = "https://github.com/thesslagreen/thessla-green-modbus-ha/wiki"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.setuptools.package-data]
"custom_components.thessla_green_modbus" = [
    "options/*.json",
    "registers/*.json",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "ANN",
]
ignore = ["ANN401"]

[tool.black]
target-version = ["py312"]
line-length = 100
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "pymodbus.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings", 
    "--tb=short",
    "-ra",
    "-q",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks asynchronous tests",
]
